<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/BrandNameTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/BrandNameTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/add_cash_type"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:drawable/divider_horizontal_bright" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/add_cash_card_password"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_card_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:hint="@string/add_cash_card_password_hint"
            android:inputType="number"
            android:maxLength="15"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:drawable/divider_horizontal_bright" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/add_cash_card_number"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_card_number"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:hint="@string/add_cash_card_number_hint"
            android:inputType="number"
            android:maxLength="15"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:drawable/divider_horizontal_bright" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_register_myname"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/add_cash_btn_ok"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</LinearLayout>