<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtDescription"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/splash_img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/abc_action_bar_home_description"
            android:src="@drawable/ico_logo_loading" />

        <TextView
            android:id="@+id/splash_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/splash_img_logo"
            android:layout_marginTop="3dp"
            android:paddingRight="5dp"
            android:text="@string/splash_text1"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/splash_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/splash_img_logo"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@id/splash_txt1"
            android:text="@string/splash_text2"
            android:textColor="@android:color/white"
            android:textSize="26sp" />
    </RelativeLayout>

    <TextView
        android:id="@id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pgLoading"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/splash_des"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@id/pgLoading"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>