<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sendsms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_send_sms">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">


        <Spinner
            android:id="@+id/spinner_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:popupBackground="@android:color/white"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />
    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/pgLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/no_connection"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.viettel.brandname.control.ScrollViewWithMaxHeight
                    android:id="@+id/scrollFlowLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <org.apmem.tools.layouts.FlowLayout xmlns:f="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/flowLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginTop="6dp"
                            android:gravity="fill"
                            android:orientation="horizontal"
                            f:layoutDirection="ltr"
                            f:weightDefault="1.0" />
                    </LinearLayout>
                </com.viettel.brandname.control.ScrollViewWithMaxHeight>

                <LinearLayout
                    android:id="@+id/layoutSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/scrollFlowLayout"
                    android:background="@android:color/white">

                    <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/txtEnterName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:hint="@string/send_sms_group_hint"
                        android:textColor="@color/text_name_pending">

                        <requestFocus />
                    </android.support.v7.widget.AppCompatAutoCompleteTextView>

                    <ImageView
                        android:id="@+id/imgAddContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="10dp"
                        android:padding="10dp"
                        android:src="@drawable/ico_addcontact" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layoutBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txt_num_chater"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="10dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/text_name_pending"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/edit_sms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_num_chater"
                            android:ems="10"
                            android:gravity="bottom|left"
                            android:hint="@string/send_sms_hint"
                            android:inputType="textCapSentences|textMultiLine"
                            android:maxLength="1000"
                            android:maxLines="5"
                            android:minHeight="50dp"
                            android:padding="10dp"
                            android:textColor="@color/text_name_pending"
                            android:textColorHint="@color/text_name_pending"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <ImageButton
                        android:id="@+id/btnSendSMS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/bg_button_send_sms"
                        android:padding="10dp"
                        android:text="@null" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>